--- a/public/pricing.css
+++ b/public/pricing.css
@@ -8,13 +8,12 @@
 body {
     width: 100%;
     height: 100%;
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     overflow-y: scroll;
-    background-color: #f5f5f5;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Header */
@@ -25,6 +24,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 0 40px;
     background-color: #f5f5f5;
     z-index: 10;
@@ -37,25 +37,48 @@ header h1 {
 }
 
 header a {
-    text-decoration: none;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-weight: bold;
+    text-decoration: none;
     color: black;
 }
 
 header a.active {
+    background-color: #37073F;
+    color: white;
+    border-radius: 5px;
+}
+
+#logo {
+    padding: 0px;
     color: #37073F;
-    text-decoration: underline;
+}
+
+#login {
+    background-color: #37073F;
+    border-radius: 5px;
+    color: #f5f5f5;
+    font-weight: bold;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 /* Pricing Section */
 #pricing-intro {
-    padding-top: 100px;
     background-color: #37073F;
-    color: #f5f5f5;
-    text-align: center;
-    padding: 50px;
     min-height: 100vh;
+    width: 100vw;
+    align-items: center;
+    color: #f5f5f5;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 80px;
+    padding-bottom: 50px;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 #pricing-content h2 {
@@ -78,7 +101,6 @@ header a.active {
 
 .plan {
     background-color: #ffffff;
-    color: #37073F;
     border-radius: 10px;
     width: 300px;
     padding: 20px;
