--- a/public/homepage.css
+++ b/public/homepage.css
@@ -15,12 +15,6 @@ body {
     display: none;
 }
 
-header h1 {
-    padding: 0px;
-    margin: 0px;
-    line-height: 1;
-}
-
 #nav-links {
     display: block;
 }
@@ -83,6 +77,14 @@ header {
     background-color: #f5f5f5;
     box-sizing: border-box;
     
+}
+
+header h1 {
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+    display: flex;
+    align-items: center;
 }
 
 h1 {
